returned bootstrap files

--- a/LayoutB/index.html
+++ b/LayoutB/index.html
@@ -38,7 +38,11 @@
 
      </div>
      <div class="mainPanel">
-         <div class="hamburger_Parent"></div>
+         <div class="hamburger_Section">
+             <div class="hamburger_Parent" onclick="ToggleSidebar()">
+                 <div class="hamburger_Main"></div>
+             </div>
+         </div>
          <div class="top"></div>         
          <div class="middle"></div>
          <div class="bottom"></div>
