--- a/LayoutB/index.html
+++ b/LayoutB/index.html
@@ -14,7 +14,7 @@
 <body>
  
  <div class="wrapper">
-     <div class="sidePanel">
+     <div class="sidePanel" id="sidePanelID">
         <div class="sp_appName">
             <h2> EduHub <span class="text-success">  App</span> </h2>
         </div>
@@ -48,5 +48,6 @@
          <div class="bottom"></div>
      </div>
  </div>
+ <script src="./wwwroot/script/customScript.js"></script>
 </body>
 </html>
