--- a/Sidebar/index.html
+++ b/Sidebar/index.html
@@ -26,6 +26,10 @@
         <div class="sidebar_Knob_Item user_Msg">
             <h6> Hi,Ademola </h6>
         </div>
+        <div class=" lines">
+            <hr>
+            
+        </div>
         <div class="sidebar_Knob_Item accordion">
           <div class="menu">
             <li class="item" id="Profiles">
