--- a/Sidebar/index.html
+++ b/Sidebar/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./dist/css/main.css">
     <link rel="stylesheet" href="./wwwroot/fontawesome/css/all.css">
+    <script src="./wwwroot/myscript.js"> </script>
 </head>
 <body>
     
@@ -18,7 +19,7 @@
 
         </div>
         <div class="sidebar_Knob_Item app_Title">
-           <h2>Flex  Soft</h2>
+           <h2 >Flex  Soft</h2>
         </div>
         <div class="sidebar_Knob_Item user_Img">
             <img class="imgx " src="./images/edited.JPG" alt="image os user" >
@@ -29,60 +30,60 @@
 
         <div class="sidebar_Knob_Item accordion">
           <div class="menu">
-            <li class="item" id="Profiles">
-                    <a href="#Profiles" class="btn"><i class="fab fa-twitter fa-2x"></i>Profiles<i class="fas fa-camera-retro fa-2x"></i></a>
+        <li class="item" id="Profiles">
+                    <a href="#Profiles" class="btn"><i class="fab fa-twitter fa-2x"></i>Profiles<i class="fas fa-angle-down fa-1x"></i></a>
                 <div class="smenu">
-                    <a href="#">Create New</a>
-                    <a href="#">Update</a>
-                    <a href="#">Import</a>
+                    <a href="#Profiles1">Create New</a>
+                    <a href="#Profiles2">Update</a>
+                    <a href="#Profiles3">Import</a>
                 </div>
-            </li>
+        </li>
           
-            <li class="item" id="Settings">
-                <a href="#Settings" class="btn"><i class="fab fa-facebook fa-2x"></i>Settings</a>
+        <li class="item " id="Settings">
+                <a href="#Settings" class="btn"><i class="fab fa-facebook fa-2x"></i>Settings<i class="fas fa-angle-down fa-1x"></i></a>
             <div class="smenu">
-                <a href="#">Create New</a>
-                <a href="#">Update</a>
-                <a href="#">Import</a>
+                <a href="#Settings1">Create New</a>
+                <a href="#Settings2">Update</a>
+                <a href="#Settings3">Import</a>
             </div>
         </li>
 
-        <li class="item" id="Technical">
-            <a href="#Technical" class="btn"><i class="fab fa-microsoft fa-2x"></i>Technical</a>
+    <li class="item" id="Technical">
+            <a href="#Technical" class="btn"><i class="fab fa-microsoft fa-2x"></i>Technical<i class="fas fa-angle-down fa-1x"></i></a>
         <div class="smenu">
-            <a href="#">Create New</a>
-            <a href="#">Update</a>
-            <a href="#">Import</a>
+            <a href="#Technical1">Create New</a>
+            <a href="#Technical2">Update</a>
+            <a href="#Technical3">Import</a>
         </div>
     </li>
 
         <li class="item" id="Staff Member">
-            <a href="#Staff Member" class="btn"><i class="fab fa-dropbox fa-2x"></i>Staff </a>
-        <div class="smenu">
-            <a href="#">Create New</a>
-            <a href="#">Update</a>
-            <a href="#">Import</a>
-        </div>
+            <a href="#Staff Member" class="btn"><i class="fab fa-dropbox fa-2x"></i>Staff <i class="fas fa-angle-down fa-1x"></i></a>
+            <div class="smenu">
+                <a href="#Staff Member1">Create New</a>
+                <a href="#Staff Member2">Update</a>
+                <a href="#Staff Member3">Import</a>
+            </div>
     </li>
 
     <li class="item" id="Student">
-        <a href="#Student" class="btn"><i class="fab fa-dropbox fa-2x"></i>Student</a>
-    <div class="smenu">
-        <a href="#">Create New</a>
-        <a href="#">Update</a>
-        <a href="#">Import</a>
-    </div>
-</li>
+        <a href="#Student" class="btn"><i class="fab fa-dropbox fa-2x"></i>Student<i class="fas fa-angle-down fa-1x"></i></a>
+        <div class="smenu">
+            <a href="#Student1">Create New</a>
+            <a href="#Student2">Update</a>
+            <a href="#Student3">Import</a>
+        </div>
+    </li>
 
 
 
     <li class="item" id="Admin">
-        <a href="#Admin" class="btn"><i class="fab fa-google fa-2x"></i>Admin</a>
-    <div class="smenu">
-        <a href="#">Create New</a>
-        <a href="#">Update</a>
-        <a href="#">Import</a>
-    </div>
+        <a href="#Admin" class="btn"><i class="fab fa-google fa-2x"></i>Admin<i class="fas fa-angle-down fa-1x"></i></a>
+        <div class="smenu">
+            <a href="#Admin1">Create New</a>
+            <a href="#Admin2">Update</a>
+            <a href="#Admin3">Import</a>
+        </div>
 </li>
 
 
@@ -103,8 +104,8 @@
     <div class="mainPanel_Item top">
         top
     </div>
-    <div class="mainPanel_Item middle">
-        mid
+    <div class="mainPanel_Item middle" >
+        mid  <h2 id ='taga'>midx</h2>
     </div>
     <div class="mainPanel_Item bottom">
         bottom
@@ -114,6 +115,9 @@
 
 
 </div>
+<script src="./wwwroot/myscript.js">
 
+
+</script>
 </body>
 </html>
